2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b15

	* Change: Give clickable dimensions their own table row so that they
	  don't end up in a situation where they're *beside* the image

	* Change: $album->save() after rehighlight in makeThumbnail() so new size is saved.
	  (by mindless)

2004-07-14  Jens A. Tkotz <jens@peino.de>  1.4.4-RC2-cvs-b14

	Fix: Use getImagePath for voting result bars.
	     Voting bars were not skinable. (caught by Jade)

2004-07-13  Jens A. Tkotz <jens@peino.de>  1.4.4-RC2-cvs-b13

        * Fix: Added missing " in albums.php.
          This caused every link after find orphans to be b0rked.

        * Fix: Added missing / to link to configwizard.

2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b12

        * Change: Add a 'rssMaxAlbums' option to the RSS page in the config wizard,
          specifying the maximum number of changed albums to be returned in
          the feed.  Defaults to 25.

        * Change: Try and optimize the number of times we use isHiddenRecurse and
          canReadRecurse when populating the RSS data

2004-07-12  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-RC2-cvs-b11

	* Fix: hidden albums are now indicated as such in fetch-album-images (GR protocol)

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b10

        * Change: Hidden images/albums could be *too* hidden (owner couldn't see them)

        * Change: slideshow validation URL is based on whether you're looking at an
          album, or the gallery-wide show.

        * Typo: Another photoAlbumUrl -> photoAlbumURL
          (so much for variables being case insensitive)

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b9

        * Typo: photoAlbumURL not photoAlbumUrl

2004-07-11  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b8

        * Change: $adminCommands links now use CSS to prevent breaks in