@@ -1,3 +1,7 @@
+2004-07-14  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b16
+
+        * Change: Don't try and create clickable dimensions on albums.
+
 2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b15
 
 	* Change: Give clickable dimensions their own table row so that they
